--- a/src/i18n/langs/en-US.json
+++ b/src/i18n/langs/en-US.json
@@ -1,17 +1,101 @@
 {
   "tabList": {
-    "home": "Home",
-    "about": "About"
+    "what": "What is a blockchain games",
+    "about": "About Zeus Blockchain Game",
+    "verify": "Blockchain verification method"
   },
-  "lang": "Translate",
+  "login": "Login",
+  "lang": "選擇語系",
   "langList": {
-    "zh-CN": "中文",
+    "zh-CN": "简体中文",
+    "zh-TW": "繁體中文",
     "en-US": "English",
-    "ru-RU": "Русский",
-    "ja-JP": "日本語",
-    "ko-KR": "한국어",
-    "vi-VN": "Tiếng Việt",
-    "th-TH": "ไทย"
+    "ja-JP": "日本語"
+  },
+  "gameList": {
+    "baccarat_title": "Baccarat22.0",
+    "baccarat_content": "Baccarat originated in Italy. It is one of the most common and popular poker games.",
+    "baccarat_intro": "The player can bet to choose the banker or the player. The card points are added to the number to receive 9 as the winner. The maximum number of card points is 9 points and the minimum is 0 points. Both sides will deal at least two cards, first And the third card is dealt to the player, and the second and fourth cards are dealt to the dealer to make up cards as appropriate. The rules for making up cards must be in full compliance with the lighting regulations.",
+    "dragon_tiger_title": "Dragon Tiger",
+    "dragon_tiger_content": "It is a card game derived from baccarat. It is different from baccarat in that it only needs to send a card to determine whether you win or lose.",
+    "dragon_tiger_intro": "",
+    "xoc_dia_title": "Xoc Dia",
+    "xoc_dia_content": "The color disc started in 1909. It is a traditional game that has been popular in Vietnam for a long time. It is a classic and simple game.",
+    "xoc_dia_intro": "The game can be played with the equipment available everywhere, cover the 4 red and white buttons on the plate with a bowl, and the result that appears after a quick shake is used as a betting combination, and the player throws the left in the bowl The end result is simple and interesting.",
+    "hoo_hey_now_title": "Hoo Hey How",
+    "hoo_hey_now_content": "Fish, shrimp, crab, also known as fish, shrimp, crab, sic bo, and Vietnamese called crab, fish tiger, is a traditional Chinese and Vietnamese game.",
+    "hoo_hey_now_intro": "The format and odds are basically the same as the other thin slice method Sic Bo. Fish, shrimp, crab, tiger, gourd and chicken are used instead of points.",
+    "teen_patti_title": "Teen Patti",
+    "teen_patti_content": "It is a gambling card game originated in the Indian subcontinent. It originated from a three-card game in English and was influenced by poker.",
+    "teen_patti_intro": "Before the game starts, everyone needs to bet the minimum amount. This fund (virtual currency in the game) is placed in the center of the table. The dealer (the dealer) gives everyone one card at a time. Until three cards per person. In the process of dealing cards, everyone can judge whether to add chips according to the cards in their hands. Before placing a bet, everyone can look at their own cards, and if they give up, put the cards face down. on the table.",
+    "andar_bahar_title": "Andar Bahar",
+    "andar_bahar_content": "Andar Bahar uses only one deck of fifty-two (52) cards for the game, without ace or wild cards.",
+    "andar_bahar_intro": "Choose one (1) card as the 「starting hand」 and two (2) faces (Andar and Bahar), and then draw one (1) card from 「Andar」 and 「Bahar」 in turn, until a certain card matches the 「start」 When the points of the 「hand card」 match, the side with the same point card will win.",
+    "btc_quickWin_title": "BTC QuickWin",
+    "btc_quickWin_content": "Zeus exclusive development products, combined with the world's Most popular digital currency and betting mode",
+    "btc_quickWin_intro": "BTC/USDT/predict the currency exchange rate trend within 30 seconds from the BTC/USDT price Wave graph, and choose 『Buy』 or 『Sell』 to earn the money. And provide three technical indicators and score cards, simple interface gameplay combined with hot topics, to help you 『30 seconds, quickly win the future of wealth.』",
+    "PK10_title": "PK10",
+    "PK10_content": "Beijing Racing, also known as PK10, is a carefully designed game based on the official results of Beijing Welfare Lottery. At present, this game is the most popular quick draw in mainland China.",
+    "PK10_intro": "Beijing Motorsports draws 44 games a day, every 20 minutes for 365 days of uninterrupted games. The lottery is based on the mainland's Beijing Motorsports official website. All day 09:10 to 23:50. The game is from 01~ The result of a total of 10 cars in the race is used as the winning number.",
+    "fan_tan_title": "Fan Tan",
+    "fan_tan_content": "Fan Tan is a very special game that is only known to a few Asian countries such as Taiwan and China",
+    "fan_tan_intro": ""
+  },
+  "whatPage": {
+    "what_blockchain_content1": "Blockchain is an intelligent peer-to-peer network that uses distributed data databases to identify, disseminate and record information. For most people, blockchain is more of a 『virtual currency』, The concept of 『mining』 or 『bitcoin』 tied together.",
+    "what_blockchain_content2": "But in fact,『blockchain technology』 is simply to create a public account on the Internet, which is recorded and checked by all participants. All participants include users or players, and everyone’s account The books are all 『same』 and 『public』, and the information recorded in these ledgers is 『not tamperable』.",
+    "what_blockchain_content3": "In other words, every result produced by a blockchain game is absolutely fair and impossible to fake.",
+    "what_blockchain_bottom": "The games currently on the market are in the hands of the game developer. Whether the player buys virtual treasures or controls the probability of the game, it can be withdrawn or changed under an instruction from the developer, without any protest from the player There is no right to reverse the leeway, and among them, game games are more prone to abuses, and most need fair, just and transparent game information. Therefore, Zeus puts all game information on the chain, openly and transparently allowing players to participate in the record of the game information ledger. Games that cannot tamper with information can better protect the rights of players.",
+    "what_advantage_header": "Blockchain Advantage Features",
+    "what_advantage_title1": "Decentralization",
+    "what_advantage_title2": "Transparency",
+    "what_advantage_title3": "Security",
+    "what_advantage_content1": "The account book is recorded and held by everyone together, so there is no need for a central server or a third party. Everyone's computer and communication equipment are part of the account book.",
+    "what_advantage_content2": "The accounts of all participants are open and transparent and information sharing.",
+    "what_advantage_content3": "Since everyone has the same global ledger, the destruction of individual ledger will not affect the whole, and there is no point in tampering with the information of a single ledger, because it does not match other people's ledger information. These ledgers are basically scattered around the world and individually controlled by individuals, so it is almost impossible to tamper with other people’s ledgers."
+  },
+  "aboutPage": {
+    "about_feature_header": "Features",
+    "about_feature_title": "360-degree no dead ends absolutely fair and cannot be tampered",
+    "about_feature_content1": "Inheriting the characteristics of the blockchain that cannot be tampered and every game is played in real time.<br/> Every card and action record is public and can be queried.It is completely impossible to do any cheat.Players can play with absolute confidence.",
+    "about_feature_content2": "In addition, every game on the Zeus blockchain is also sent to Gaming Laboratories International(GLI) for certification, Fully comply with relevant laws and technical specifications.",
+    "about_feature_content3": "GLI has U.S. and international certifications, conforms to ISO/IEC 17025, 17020 and 17065 standards, and has the technical capabilities to test and verify the gaming, gambling and lottery industries. GLI is also designated as an official testing laboratory by nearly 400 gaming regulatory authorities in the world and provides absolutely fair testing and certification,it is also one of the most credible standards in the current international gaming market.",
+    "about_customer_title": "Unique games items Mainly popular games in Southeast Asia and India",
+    "about_customer_content1": "Chinese Market: Baccarat, Beijing Racing",
+    "about_customer_content2": "Indian Market: Teenpatti, Rummy, Andar Bahar",
+    "about_customer_content3": "Southeast Asian Market: Color Plate, Fan Tan, Fish, Shrimp and Crab, Three Cards, Four Cards",
+    "about_gameStyle_content": "To break away from the traditional game screen Get rid of the past game screen"
+  },
+  "verifyPage": {
+    "verify_sha_title": "Tamper-proof Multiple encryption, fair and just",
+    "verify_sha_content1": "SHA(Secure Hash Algorithm)is variety of Cryptographic hash function designed by the National Security Agency (NSA) and issued by the National Institute of Standards and Technology (NIST).",
+    "verify_sha_content2": "All our cards will be encrypted with SHA 256 to generate a ”summary“ and tell the player before the player places a bet.",
+    "verify_step_header": "Verifiable fairness",
+    "verify_step_title1": "Step1",
+    "verify_step_title2": "Step2",
+    "verify_step_title3": "Step3",
+    "verify_step_content1": "We will announce the ”Summary“ of all cards before the game starts.The summary is a combination of 32-bit letters and numbers generated by seed encryption",
+    "verify_step_content2": "When the player's bet is completed, we will announce the original character (seed). The suit and number of cards are determined by the “seed”. A seed can only generate one “summary” through the SHA 256 encryption algorithm.This means that once the summary is published, no one can tamper with the game result “seed”",
+    "verify_step_content3": "Players can use the hash value tool to verify whether the character matches the encrypted character before place a bet.The seed can encrypt the summary, and the summary cannot calculate the seed in reverse",
+    "verify_step_bottom": "The seed can be encrypted for the summary and the summary can’t calculate the seed in reverse.",
+    "verify_char_title": "Character",
+    "verify_char_boxTitle1": "Seed",
+    "verify_char_boxTitle2": "Summary",
+    "verify_char_boxTitle1-1": "Unencrypted characters",
+    "verify_char_boxTitle2-1": "Encrypted characters",
+    "verify_char_boxSeed1": "Random characters, guarantee seed uniqueness",
+    "verify_char_boxSeed2": "The summary is a combination of 32-bit letters and numbers generated by seed encryption",
+    "verify_char_boxSeed1_title1": "Number of cards",
+    "verify_char_boxSeed1_title2": "The suit of the card",
+    "verify_char_boxSeed1_title3": "Separator",
+    "verify_char_boxSeed1_info1": "Heart",
+    "verify_char_boxSeed1_info2": "Diamond",
+    "verify_char_boxSeed1_info3": "Spade",
+    "verify_char_boxSeed1_info4": "Club",
+    "verify_char_bottom_title": "True fair without fear of any doubt, We support third-party ”SHA256“ tool inspection ",
+    "verify_char_bottom_content": "You can copy the seed to the following website or others to verify the correctness of the summary",
+    "verify_char_btn1": "website1",
+    "verify_char_btn2": "website2",
+    "verify_char_btn3": "website3"
   }
 }
-
