--- a/src/i18n/langs/zh-CN.json
+++ b/src/i18n/langs/zh-CN.json
@@ -1,17 +1,101 @@
 {
   "tabList": {
-    "home": "首頁",
-    "about": "關於"
+    "what": "什么是区块链游戏",
+    "about": "关于宙斯区块链游戏",
+    "verify": "区块链验证方式"
   },
+  "login": "登录",
   "lang": "选择语系",
   "langList": {
-    "zh-CN": "中文",
+    "zh-CN": "简体中文",
+    "zh-TW": "繁體中文",
     "en-US": "English",
-    "ru-RU": "Русский",
-    "ja-JP": "日本語",
-    "ko-KR": "한국어",
-    "vi-VN": "Tiếng Việt",
-    "th-TH": "ไทย"
+    "ja-JP": "日本語"
+  },
+  "gameList": {
+    "baccarat_title": "百家乐2.0",
+    "baccarat_content": "百家乐源于义大利，是扑克游戏常见之一，亦是受欢迎的游戏之一。",
+    "baccarat_intro": "玩家可下注选择庄家或闲家，牌面点数相加个数字接进9为胜利方，牌面点数最大为9点最小0点。双方至少会发两张牌，第一及第三张牌发给闲家，第二及第四张牌则发给庄家视情况补牌，补牌规则必须完全遵照照明规定。",
+    "dragon_tiger_title": "龙虎",
+    "dragon_tiger_content": "是由百家乐所衍生出来的一款纸牌游戏，不同于百家乐之处，即为仅需派出一张牌比大小就可以定输赢。",
+    "dragon_tiger_intro": "",
+    "xoc_dia_title": "色碟",
+    "xoc_dia_content": "色碟始于1909，是越南流行已久的传统游戏，是一件很经典，玩法很简单的游戏。",
+    "xoc_dia_intro": "用身边随处可得的器具即可进行游戏，用碗盖住碟上的4颗红白双色纽扣，快速摇动后出现的结果做为下注组合，玩家扔碗中留下的最终结果，简单有趣。",
+    "hoo_hey_now_title": "鱼虾蟹",
+    "hoo_hey_now_content": "鱼虾蟹，又称鱼虾蟹骰宝，越南称为匏蟹鱼虎，是中国和越南传统游戏。",
+    "hoo_hey_now_intro": "其型式与赔率跟另一薄片方法骰宝基本一样，采用骰子由鱼，虾，蟹，老虎，葫芦及鸡代替点数。",
+    "teen_patti_title": "Teen Patti",
+    "teen_patti_content": "是一种赌博 纸牌游戏 ，起源于印度次大陆 ，它起源于三张牌的英语游戏，受到扑克的影响。",
+    "teen_patti_intro": "在游戏开始之前，所有人都需要按照最低数目押注，这笔资金（游戏里为虚拟币）放在桌子中央，發牌者（庄家）每次给所有人一张牌，直到每人三张为止。在發牌的过程中，每个人都可以根据自己手中的牌判断是否要增加筹码，在下注之前，每个人都可以看自己的牌，如果放弃则把牌面朝下放在桌子上。",
+    "andar_bahar_title": "Andar Bahar",
+    "andar_bahar_content": "Andar Bahar仅使用一副扑克牌五十二（52）张牌进行游戏，不含王牌或百搭牌。",
+    "andar_bahar_intro": "选择一张（1）牌作为「起手牌」及两（2）面（Andar和Bahar），然后依次从「Andar」及「Bahar」抽一张（1）牌，直到某张牌与「起手牌」的点数匹配时，同一张点数牌的那一方将获胜。",
+    "btc_quickWin_title": "BTC QuickWin",
+    "btc_quickWin_content": "宙斯独家研发产品，结合全球最火热的数字货币和下注模式。",
+    "btc_quickWin_intro": "从BTC/USDT价格波动图预测30秒内的货币汇率趋势，选择『购买』或『卖』来赚取交易金额。且提供三种技术指标与路纸，简单界面玩法与热门话题结合，帮助您『30秒，快速赢得财富未来。』",
+    "PK10_title": "PK10",
+    "PK10_content": "北京赛车别名又称为PK10，是根据北京福利彩票官方开奖结果所精心设计的游戏，目前这款游戏是大陆最热门的快开彩。",
+    "PK10_intro": "北京赛车一天开奖44场，每20分钟进行一场比赛365天不间断，开奖是依据大陆的北京赛车官网开奖，全天09：10至23：50。游戏由车号01〜10共10台车进行比赛的结果作为开奖号码。",
+    "fan_tan_title": "番摊",
+    "fan_tan_content": "「番摊」是款非常特别的游戏是专属于台湾、中国等少数亚洲国家才会知道的游戏",
+    "fan_tan_intro": ""
+  },
+  "whatPage": {
+    "what_blockchain_content1": "区块链（Blockchain）是用分布式数据资料库识别、传播和记载信息的智能化对等网络，对于大多数人来说，区块链更多是和『虚拟货币』、『挖矿』或『比特币』绑在一起的概念。",
+    "what_blockchain_content2": "但其实简单来说『区块链技术』就是在互联网上建立一个公共帐本，由所有参与者共同纪录和查核，而所有参与者包含了使用者或玩家，每个人的帐本都是〝相同的”、〝公开的〞，并且这些帐本中记载的讯息是〝不可被篡改的”。",
+    "what_blockchain_content3": "也就是说，区块链游戏产生的每个结果，都是绝对公平且不可能造假的。",
+    "what_blockchain_bottom": "目前市面上的游戏都是掌控在游戏开发者手中，不论是玩家购买虚拟宝物或是牌局机率的控制，都能在开发者的一个指令下收回或改变，玩家没有任何抗议的余地也无权逆转，而其中博奕游戏更容易发生弊端，也最为需要公平公正透明的游戏资讯，因此宙斯将所有游戏资讯上链，公开透明的让玩家全权参与游戏资讯帐本的纪录，庄家无法篡改资讯的游戏，更能保障玩家权益。",
+    "what_advantage_header": "区块链优势特性",
+    "what_advantage_title1": "去中心化",
+    "what_advantage_title2": "透明性",
+    "what_advantage_title3": "安全性",
+    "what_advantage_content1": "帐本是由大家一起记录且共同持有，所以不需要中心服务器、也不需要第三方机构，每个人的电脑、通讯设备都是帐本的一部份。",
+    "what_advantage_content2": "所有参与者的帐本都是公开透明且信息共享。",
+    "what_advantage_content3": "由于大家都有一样的全局帐本，所以个别帐本被毁坏不会影响整体，篡改单个帐本的信息也毫无意义，因为跟其他人的帐本资讯匹配不上，而这些帐本基本都分散在世界各地各个个体单独控制，所以要篡改到其他人的帐本几乎是不可能的。"
+  },
+  "aboutPage": {
+    "about_feature_header": "Zeus区块链游戏特色",
+    "about_feature_title": "360度无死角绝对公平公正且无法篡改",
+    "about_feature_content1": "秉承区块链特性无法被篡改，且每一局都是即时进行，每张牌每个动作纪录都是公开可以被查询的，完全无法做任何作弊行为，玩家能绝对放心游戏。",
+    "about_feature_content2": "此外宙斯区块链每款游戏也都送至国际博奕研究室（Gaming Laboratories International)，简称GLI认证，完全符合博彩相关法律和技术规格要求。",
+    "about_feature_content3": "GLI 本身拥有美国和国际认证，符合ISO / IEC 17025，17020和17065标准，具有测试与验证游戏、赌博和彩票行业的技术能力。GLI 同时为全球近400个博彩监管机构所指定的官方测试实验室，提供绝对公正的测试与认证，也是目前国际博奕市场中，最具公信力的规范之一。",
+    "about_customer_title": "游戏品项独特 以东南亚及印度热门游戏为主",
+    "about_customer_content1": "中国市场：百家乐、北京赛车",
+    "about_customer_content2": "印度市场：Teenpatti、Rummy、Andar Bahar",
+    "about_customer_content3": "东南亚市场：色碟、番摊、鱼虾蟹、三张牌、四张牌",
+    "about_gameStyle_content": "跳脱传统游戏画面独树一格的游戏画风"
+  },
+  "verifyPage": {
+    "verify_sha_title": "防篡改 多重加密 公平公正",
+    "verify_sha_content1": "SHA（Secure Hash Algorithm，译作安全散裂算法）是美国国家安全局（NSA）设计，美国国家标准与技术研究院（NIST）发布的各种密码散裂函数。用于确保信息传输完整一致。",
+    "verify_sha_content2": "我们所有的牌将利用SHA 256加密生成“摘要”，并于玩家下注前告诉玩家。",
+    "verify_step_header": "可验证的公平性",
+    "verify_step_title1": "Step1",
+    "verify_step_title2": "Step2",
+    "verify_step_title3": "Step3",
+    "verify_step_content1": "游戏开始前我们将公布所有牌的”摘要”摘要是由种子加密生成的32位字母和数字的组合",
+    "verify_step_content2": "当玩家下注完成后，我们将公布原始字符（即种子） 牌的花色与点数由“种子”决定，一个种子通过SHA 256加密算法只能生成一个“摘要”这意味着摘要一但公布，任何人都无法篡改游戏结果“种子”",
+    "verify_step_content3": "玩家可利用哈希值工具验证该字符是否与下注前的加密字符吻合。种子可加密摘要，摘要不能逆向计算种子",
+    "verify_step_bottom": "种子可加密摘要，摘要不能逆向计算种子",
+    "verify_char_title": "字符",
+    "verify_char_boxTitle1": "种子",
+    "verify_char_boxTitle2": "摘要",
+    "verify_char_boxTitle1-1": "未加密字符",
+    "verify_char_boxTitle2-1": "已加密字符",
+    "verify_char_boxSeed1": "随机字符，保证种子唯一性",
+    "verify_char_boxSeed2": "摘要是由种子加密生成的32位字母和数字的组合",
+    "verify_char_boxSeed1_title1": "牌的点数",
+    "verify_char_boxSeed1_title2": "牌的花色",
+    "verify_char_boxSeed1_title3": "分隔符号",
+    "verify_char_boxSeed1_info1": "红桃",
+    "verify_char_boxSeed1_info2": "方块",
+    "verify_char_boxSeed1_info3": "黑桃",
+    "verify_char_boxSeed1_info4": "梅花",
+    "verify_char_bottom_title": "真公平不惧任何质疑，我们支持任何第三方SHA 256工具检验",
+    "verify_char_bottom_content": "您可以将种子复制到以下或其他网站进行摘要正确性验证",
+    "verify_char_btn1": "验证1",
+    "verify_char_btn2": "验证2",
+    "verify_char_btn3": "验证3"
   }
 }
-
