--- a/src/i18n/langs/zh-TW.json
+++ b/src/i18n/langs/zh-TW.json
@@ -1,17 +1,101 @@
 {
   "tabList": {
-    "home": "首頁",
-    "about": "關於"
+    "what": "什麼是區塊鏈遊戲",
+    "about": "關於宙斯區塊鏈遊戲",
+    "verify": "區塊鏈驗證方式"
   },
-  "lang": "选择语系",
+  "login": "登入",
+  "lang": "選擇語系",
   "langList": {
-    "zh-CN": "中文",
+    "zh-CN": "简体中文",
+    "zh-TW": "繁體中文",
     "en-US": "English",
-    "ru-RU": "Русский",
-    "ja-JP": "日本語",
-    "ko-KR": "한국어",
-    "vi-VN": "Tiếng Việt",
-    "th-TH": "ไทย"
+    "ja-JP": "日本語"
+  },
+  "gameList": {
+    "baccarat_title": "百家樂2.0",
+    "baccarat_content": "百家樂源於義大利，是撲克遊戲常見之一，亦是受歡迎的遊戲之一。",
+    "baccarat_intro": "玩家可下注選擇莊家或閒家，牌麵點數相加個數字接進9為勝利方，牌麵點數最大為9點最小0點。雙方至少會發兩張牌，第一及第三張牌發給閒家，第二及第四張牌則發給莊家視情況補牌，補牌規則必須完全遵照照明規定。",
+    "dragon_tiger_title": "龍虎",
+    "dragon_tiger_content": "是由百家樂所衍生出來的一款紙牌遊戲，不同於百家樂之處，即為僅需派出一張牌比大小就可以定輸贏。",
+    "dragon_tiger_intro": "",
+    "xoc_dia_title": "色碟",
+    "xoc_dia_content": "色碟始於1909，是越南流行已久的傳統遊戲，是一件很經典，玩法很簡單的遊戲。",
+    "xoc_dia_intro": "用身邊隨處可得的器具即可進行遊戲，用碗蓋住碟上的4顆紅白雙色鈕扣，快速搖動後出現的結果做為下注組合，玩家扔碗中留下的最終結果，簡單有趣。",
+    "hoo_hey_now_title": "魚蟹蝦",
+    "hoo_hey_now_content": "魚蝦蟹，又稱魚蝦蟹骰寶，越南稱為匏蟹魚虎，是中國和越南傳統遊戲。",
+    "hoo_hey_now_intro": "其型式與賠率跟另一薄片方法骰寶基本一樣，採用骰子由魚，蝦，蟹，老虎，葫蘆及雞代替點數。",
+    "teen_patti_title": "Teen Patti",
+    "teen_patti_content": "是一種賭博紙牌遊戲，起源於印度次大陸，它起源於三張牌的英語遊戲，受到撲克的影響。",
+    "teen_patti_intro": "在遊戲開始之前，所有人都需要按照最低數目押注，這筆資金（遊戲里為虛擬幣）放在桌子中央，發牌者（莊家）每次給所有人一張牌，直到每人三張為止。在發牌的過程中，每個人都可以根據自己手中的牌判斷是否要增加籌碼，在下注之前，每個人都可以看自己的牌，如果放棄則把牌面朝下放在桌子上。",
+    "andar_bahar_title": "Andar Bahar",
+    "andar_bahar_content": "Andar Bahar僅使用一副撲克牌五十二（52）張牌進行遊戲，不含王牌或百搭牌。",
+    "andar_bahar_intro": "選擇一張（1）牌作為「起手牌」及兩（2）面（Andar和Bahar），然後依次從「Andar」及「Bahar」抽一張（1）牌，直到某張牌與「起手牌」的點數匹配時，同一張點數牌的那一方將獲勝。",
+    "btc_quickWin_title": "BTC QuickWin",
+    "btc_quickWin_content": "宙斯獨家研發產品，結合全球最火熱的數字貨幣和下注模式。",
+    "btc_quickWin_intro": "從BTC/USDT價格波動圖預測30秒內的貨幣匯率趨勢，選擇『購買』或『賣』來賺取交易金額。且提供三種技術指標與路紙，簡單界面玩法與熱門話題結合，幫助您『30秒，快速贏得財富未來。』",
+    "PK10_title": "PK10",
+    "PK10_content": "北京賽車别名又稱為PK10，是根據北京福利彩票官方開獎結果所精心設計的遊戲，目前這款遊戲是大陸最熱門的快開彩。",
+    "PK10_intro": "北京賽車一天開獎44場，每20分鐘進行一場比賽365天不間斷，開獎是依據大陸的北京賽車官網開獎，全天09：10至23：50。遊戲由車號01〜10共10台車進行比賽的結果作為開獎號碼。",
+    "fan_tan_title": "番攤",
+    "fan_tan_content": "「番攤」是款非常特別的遊戲是專屬於台灣、中國等少數亞洲國家才會知道的遊戲",
+    "fan_tan_intro": ""
+  },
+  "whatPage": {
+    "what_blockchain_content1": "區塊鏈（Blockchain）是用分佈式數據資料庫識別、傳播和記載信息的智能化對等網絡，對於大多數人來說，區塊鏈更多是和『虛擬貨幣』、『挖礦』或『比特幣』綁在一起的概念。",
+    "what_blockchain_content2": "但其實簡單來說『區塊鏈技術』就是在互聯網上建立一個公共帳本，由所有參與者共同紀錄和查核，而所有參與者包含了使用者或玩家，每個人的帳本都是〝相同的”、〝公開的〞，並且這些帳本中記載的訊息是〝不可被篡改的”。",
+    "what_blockchain_content3": "也就是說，區塊鏈遊戲產生的每個結果，都是絕對公平且不可能造假的。",
+    "what_blockchain_bottom": "目前市面上的遊戲都是掌控在遊戲開發者手中，不論是玩家購買虛擬寶物或是牌局機率的控制，都能在開發者的一個指令下收回或改變，玩家沒有任何抗議的餘地也無權逆轉，而其中博奕遊戲更容易發生弊端，也最為需要公平公正透明的遊戲資訊，因此宙斯將所有遊戲資訊上鍊，公開透明的讓玩家全權參與遊戲資訊帳本的紀錄，莊家無法篡改資訊的遊戲，更能保障玩家權益。",
+    "what_advantage_header": "區塊鏈優勢特性",
+    "what_advantage_title1": "去中心化",
+    "what_advantage_title2": "透明性",
+    "what_advantage_title3": "安全性",
+    "what_advantage_content1": "帳本是由大家一起記錄且共同持有，所以不需要中心服務器、也不需要第三方機構，每個人的電腦、通訊設備都是帳本的一部份。",
+    "what_advantage_content2": "所有參與者的帳本都是公開透明且信息共享。",
+    "what_advantage_content3": "由於大家都有一樣的全局帳本，所以個別帳本被毀壞不會影響整體，篡改單個帳本的信息也毫無意義，因為跟其他人的帳本資訊匹配不上，而這些帳本基本都分散在世界各地各個個體單獨控制，所以要篡改到其他人的帳本幾乎是不可能的。"
+  },
+  "aboutPage": {
+    "about_feature_header": "Zeus區塊鏈遊戲特色",
+    "about_feature_title": "360度無死角絕對公平公正且無法篡改",
+    "about_feature_content1": "秉承區塊鏈特性無法被篡改，且每一局都是即時進行，每張牌每個動作紀錄都是公開可以被查詢的，完全無法做任何作弊行為，玩家能絕對放心遊戲。",
+    "about_feature_content2": "此外宙斯區塊鏈每款遊戲也都送至國際博奕研究室（Gaming Laboratories International），簡稱GLI認證，完全符合博彩相關法律和技術規格要求。",
+    "about_feature_content3": "GLI 本身擁有美國和國際認證，符合ISO / IEC 17025，17020和17065標準，具有測試與驗證遊戲、賭博和彩票行業的技術能力。GLI 同時為全球近400個博彩監管機構所指定的官方測試實驗室，提供絕對公正的測試與認證，也是目前國際博奕市場中，最具公信力的規範之一。",
+    "about_customer_title": "遊戲品項獨特 以東南亞及印度熱門遊戲為主",
+    "about_customer_content1": "中國市場：百家樂、北京賽車",
+    "about_customer_content2": "印度市場：Teenpatti、Rummy、Andar Bahar",
+    "about_customer_content3": "東南亞市場：色碟、番攤、魚蝦蟹、三張牌、四張牌",
+    "about_gameStyle_content": "跳脫傳統遊戲畫面獨樹一格的遊戲畫風"
+  },
+  "verifyPage": {
+    "verify_sha_title": "防篡改 多重加密 公平公正",
+    "verify_sha_content1": "SHA（Secure Hash Algorithm，譯作安全散裂算法）是美國國家安全局（NSA）設計，美國國家標準與技術研究院（NIST）發布的各種密碼散裂函數。用於確保信息傳輸完整一致。",
+    "verify_sha_content2": "我們所有的牌將利用SHA 256加密生成“摘要”，並於玩家下注前告訴玩家。",
+    "verify_step_header": "可驗證的公平性",
+    "verify_step_title1": "Step1",
+    "verify_step_title2": "Step2",
+    "verify_step_title3": "Step3",
+    "verify_step_content1": "遊戲開始前我們將公佈所有牌的”摘要” 摘要是由種子加密生成的32位字母和數字的組合",
+    "verify_step_content2": "當玩家下注完成後，我們將公佈原始字符（即種子） 牌的花色與點數由“種子”決定，一個種子通過SHA 256加密算法只能生成一個“摘要”這意味著摘要一但公佈，任何人都無法篡改遊戲結果“種子”",
+    "verify_step_content3": "玩家可利用哈希值工具驗證該字符是否與下注前的加密字符吻合種子可加密摘要，摘要不能逆向計算種子",
+    "verify_step_bottom": "種子可加密摘要，摘要不能逆向計算種子",
+    "verify_char_title": "字符",
+    "verify_char_boxTitle1": "種子",
+    "verify_char_boxTitle2": "摘要",
+    "verify_char_boxTitle1-1": "未加密字符",
+    "verify_char_boxTitle2-1": "已加密字符",
+    "verify_char_boxSeed1": "随機字符，保證種子唯一性",
+    "verify_char_boxSeed2": "摘要是由種子加密生成的32位字母和數字的组合",
+    "verify_char_boxSeed1_title1": "牌的點數",
+    "verify_char_boxSeed1_title2": "牌的花色",
+    "verify_char_boxSeed1_title3": "分隔符號",
+    "verify_char_boxSeed1_info1": "紅桃",
+    "verify_char_boxSeed1_info2": "方塊",
+    "verify_char_boxSeed1_info3": "黑桃",
+    "verify_char_boxSeed1_info4": "梅花",
+    "verify_char_bottom_title": "真公平不懼任何質疑，我们支持任何第三方SHA 256工具檢驗",
+    "verify_char_bottom_content": "您可以將種子複制到以下或其他網站進行摘要正確性驗證",
+    "verify_char_btn1": "驗證1",
+    "verify_char_btn2": "驗證2",
+    "verify_char_btn3": "驗證3"
   }
 }
-
