10/21更新gameItem.vue跟NavBar.vue 將computed的list放進setup中

--- a/src/i18n/langs/en-US.json
+++ b/src/i18n/langs/en-US.json
@@ -24,15 +24,15 @@
     "teen_patti_title": "Teen Patti",
     "teen_patti_content": "It is a gambling card game originated in the Indian subcontinent. It originated from a three-card game in English and was influenced by poker.",
     "teen_patti_intro": "Before the game starts, everyone needs to bet the minimum amount. This fund (virtual currency in the game) is placed in the center of the table. The dealer (the dealer) gives everyone one card at a time. Until three cards per person. In the process of dealing cards, everyone can judge whether to add chips according to the cards in their hands. Before placing a bet, everyone can look at their own cards, and if they give up, put the cards face down. on the table.",
-    "andar_bahar_title": "Andar Bahar",
-    "andar_bahar_content": "Andar Bahar uses only one deck of fifty-two (52) cards for the game, without ace or wild cards.",
-    "andar_bahar_intro": "Choose one (1) card as the 「starting hand」 and two (2) faces (Andar and Bahar), and then draw one (1) card from 「Andar」 and 「Bahar」 in turn, until a certain card matches the 「start」 When the points of the 「hand card」 match, the side with the same point card will win.",
+    "ander_bahar_title": "Andar Bahar",
+    "ander_bahar_content": "Andar Bahar uses only one deck of fifty-two (52) cards for the game, without ace or wild cards.",
+    "ander_bahar_intro": "Choose one (1) card as the 「starting hand」 and two (2) faces (Andar and Bahar), and then draw one (1) card from 「Andar」 and 「Bahar」 in turn, until a certain card matches the 「start」 When the points of the 「hand card」 match, the side with the same point card will win.",
     "btc_quickWin_title": "BTC QuickWin",
     "btc_quickWin_content": "Zeus exclusive development products, combined with the world's Most popular digital currency and betting mode",
     "btc_quickWin_intro": "BTC/USDT/predict the currency exchange rate trend within 30 seconds from the BTC/USDT price Wave graph, and choose 『Buy』 or 『Sell』 to earn the money. And provide three technical indicators and score cards, simple interface gameplay combined with hot topics, to help you 『30 seconds, quickly win the future of wealth.』",
-    "PK10_title": "PK10",
-    "PK10_content": "Beijing Racing, also known as PK10, is a carefully designed game based on the official results of Beijing Welfare Lottery. At present, this game is the most popular quick draw in mainland China.",
-    "PK10_intro": "Beijing Motorsports draws 44 games a day, every 20 minutes for 365 days of uninterrupted games. The lottery is based on the mainland's Beijing Motorsports official website. All day 09:10 to 23:50. The game is from 01~ The result of a total of 10 cars in the race is used as the winning number.",
+    "Pk10_title": "PK10",
+    "Pk10_content": "Beijing Racing, also known as PK10, is a carefully designed game based on the official results of Beijing Welfare Lottery. At present, this game is the most popular quick draw in mainland China.",
+    "Pk10_intro": "Beijing Motorsports draws 44 games a day, every 20 minutes for 365 days of uninterrupted games. The lottery is based on the mainland's Beijing Motorsports official website. All day 09:10 to 23:50. The game is from 01~ The result of a total of 10 cars in the race is used as the winning number.",
     "fan_tan_title": "Fan Tan",
     "fan_tan_content": "Fan Tan is a very special game that is only known to a few Asian countries such as Taiwan and China",
     "fan_tan_intro": ""
