--- a/src/i18n/langs/ja-JP.json
+++ b/src/i18n/langs/ja-JP.json
@@ -24,15 +24,15 @@
     "teen_patti_title": "Teen Patti",
     "teen_patti_content": "インド亜大陸発祥のギャンブルカードゲームです。それは英語の3枚のカードゲームから始まり、ポーカーの影響を受けました。",
     "teen_patti_intro": "ゲームが始まる前に、誰もが最低額を賭ける必要があります。このファンド（ゲーム内の仮想通貨）はテーブルの中央に配置されます。ディーラー（ディーラー）は、一度に1枚のカードを全員に渡します。お一人様3枚まで。カードを配る過程で、誰もが手札に応じてチップを追加するかどうかを判断できます。賭けをする前に、誰もが自分のカードを見ることができ、あきらめた場合は、カードを裏向きに置きます。テーブルの上。",
-    "andar_bahar_title": "Andar Bahar",
-    "andar_bahar_content": "Andar Baharは、エースやワイルドカードを使用せずに、52枚のカードからなる1枚のデッキのみをゲームに使用します。",
-    "andar_bahar_intro": "「スターティングハンド」として1枚のカードと2枚の面（アンダルとバハール）を選び、特定のカードが「スターティングハンド」と一致するまで、「アンダル」と「バハール」から順番に1枚のカードを引きます。「スタート」「ハンドカード」のポイントが一致すると、同じポイントカードの方が勝ちます",
+    "ander_bahar_title": "Andar Bahar",
+    "ander_bahar_content": "Andar Baharは、エースやワイルドカードを使用せずに、52枚のカードからなる1枚のデッキのみをゲームに使用します。",
+    "ander_bahar_intro": "「スターティングハンド」として1枚のカードと2枚の面（アンダルとバハール）を選び、特定のカードが「スターティングハンド」と一致するまで、「アンダル」と「バハール」から順番に1枚のカードを引きます。「スタート」「ハンドカード」のポイントが一致すると、同じポイントカードの方が勝ちます",
     "btc_quickWin_title": "BTC QuickWin",
     "btc_quickWin_content": "ゼウス独自開発の製品、世界でヒットのデジタル通貨とベッティングモードを組み合わせて。",
     "btc_quickWin_intro": "BTC / USDTの価格変動グラフから30秒以内の為替レートの傾向を予測し、「買う」または「売る」を選択して、その金額を得ることができます。ゲームの中で3つの技術的指標とゲームの結果記録を提供し、簡単なUIやルールとヒットの話題を組み合わせて、３０秒だけ、素敵な未来をあなたに届ける",
-    "PK10_title": "PK10",
-    "PK10_content": "PK10の別名は北京レース、北京福利宝くじの公式結果に基づいて慎重に設計されたゲームです。現在、このゲームは中国本土で最も人気なクイックドローです。",
-    "PK10_intro": "北京レースは、年中無休のゲームで20分ごとに1日44ゲームを行います。抽選は、北京モータースポーツの公式ウェブサイトに基づいています。終日は09:10から23:50です。ゲームは01から10までです。レースでの合計10台の車の結果が当選番号として使用されます。",
+    "Pk10_title": "PK10",
+    "Pk10_content": "PK10の別名は北京レース、北京福利宝くじの公式結果に基づいて慎重に設計されたゲームです。現在、このゲームは中国本土で最も人気なクイックドローです。",
+    "Pk10_intro": "北京レースは、年中無休のゲームで20分ごとに1日44ゲームを行います。抽選は、北京モータースポーツの公式ウェブサイトに基づいています。終日は09:10から23:50です。ゲームは01から10までです。レースでの合計10台の車の結果が当選番号として使用されます。",
     "fan_tan_title": "ファンタン",
     "fan_tan_content": "「ファンタン」は、台湾や中国などのアジアのいくつかの国でしか知られていない非常に特別なゲームです",
     "fan_tan_intro": ""
