--- a/src/i18n/langs/zh-CN.json
+++ b/src/i18n/langs/zh-CN.json
@@ -24,15 +24,15 @@
     "teen_patti_title": "Teen Patti",
     "teen_patti_content": "是一种赌博 纸牌游戏 ，起源于印度次大陆 ，它起源于三张牌的英语游戏，受到扑克的影响。",
     "teen_patti_intro": "在游戏开始之前，所有人都需要按照最低数目押注，这笔资金（游戏里为虚拟币）放在桌子中央，發牌者（庄家）每次给所有人一张牌，直到每人三张为止。在發牌的过程中，每个人都可以根据自己手中的牌判断是否要增加筹码，在下注之前，每个人都可以看自己的牌，如果放弃则把牌面朝下放在桌子上。",
-    "andar_bahar_title": "Andar Bahar",
-    "andar_bahar_content": "Andar Bahar仅使用一副扑克牌五十二（52）张牌进行游戏，不含王牌或百搭牌。",
-    "andar_bahar_intro": "选择一张（1）牌作为「起手牌」及两（2）面（Andar和Bahar），然后依次从「Andar」及「Bahar」抽一张（1）牌，直到某张牌与「起手牌」的点数匹配时，同一张点数牌的那一方将获胜。",
+    "andar_baher_title": "Andar Bahar",
+    "andar_baher_content": "Andar Bahar仅使用一副扑克牌五十二（52）张牌进行游戏，不含王牌或百搭牌。",
+    "andar_baher_intro": "选择一张（1）牌作为「起手牌」及两（2）面（Andar和Bahar），然后依次从「Andar」及「Bahar」抽一张（1）牌，直到某张牌与「起手牌」的点数匹配时，同一张点数牌的那一方将获胜。",
     "btc_quickWin_title": "BTC QuickWin",
     "btc_quickWin_content": "宙斯独家研发产品，结合全球最火热的数字货币和下注模式。",
     "btc_quickWin_intro": "从BTC/USDT价格波动图预测30秒内的货币汇率趋势，选择『购买』或『卖』来赚取交易金额。且提供三种技术指标与路纸，简单界面玩法与热门话题结合，帮助您『30秒，快速赢得财富未来。』",
-    "PK10_title": "PK10",
-    "PK10_content": "北京赛车别名又称为PK10，是根据北京福利彩票官方开奖结果所精心设计的游戏，目前这款游戏是大陆最热门的快开彩。",
-    "PK10_intro": "北京赛车一天开奖44场，每20分钟进行一场比赛365天不间断，开奖是依据大陆的北京赛车官网开奖，全天09：10至23：50。游戏由车号01〜10共10台车进行比赛的结果作为开奖号码。",
+    "Pk10_title": "PK10",
+    "Pk10_content": "北京赛车别名又称为PK10，是根据北京福利彩票官方开奖结果所精心设计的游戏，目前这款游戏是大陆最热门的快开彩。",
+    "Pk10_intro": "北京赛车一天开奖44场，每20分钟进行一场比赛365天不间断，开奖是依据大陆的北京赛车官网开奖，全天09：10至23：50。游戏由车号01〜10共10台车进行比赛的结果作为开奖号码。",
     "fan_tan_title": "番摊",
     "fan_tan_content": "「番摊」是款非常特别的游戏是专属于台湾、中国等少数亚洲国家才会知道的游戏",
     "fan_tan_intro": ""
