--- a/src/i18n/langs/zh-TW.json
+++ b/src/i18n/langs/zh-TW.json
@@ -24,15 +24,15 @@
     "teen_patti_title": "Teen Patti",
     "teen_patti_content": "是一種賭博紙牌遊戲，起源於印度次大陸，它起源於三張牌的英語遊戲，受到撲克的影響。",
     "teen_patti_intro": "在遊戲開始之前，所有人都需要按照最低數目押注，這筆資金（遊戲里為虛擬幣）放在桌子中央，發牌者（莊家）每次給所有人一張牌，直到每人三張為止。在發牌的過程中，每個人都可以根據自己手中的牌判斷是否要增加籌碼，在下注之前，每個人都可以看自己的牌，如果放棄則把牌面朝下放在桌子上。",
-    "andar_bahar_title": "Andar Bahar",
-    "andar_bahar_content": "Andar Bahar僅使用一副撲克牌五十二（52）張牌進行遊戲，不含王牌或百搭牌。",
-    "andar_bahar_intro": "選擇一張（1）牌作為「起手牌」及兩（2）面（Andar和Bahar），然後依次從「Andar」及「Bahar」抽一張（1）牌，直到某張牌與「起手牌」的點數匹配時，同一張點數牌的那一方將獲勝。",
+    "ander_bahar_title": "Andar Bahar",
+    "ander_bahar_content": "Andar Bahar僅使用一副撲克牌五十二（52）張牌進行遊戲，不含王牌或百搭牌。",
+    "ander_bahar_intro": "選擇一張（1）牌作為「起手牌」及兩（2）面（Andar和Bahar），然後依次從「Andar」及「Bahar」抽一張（1）牌，直到某張牌與「起手牌」的點數匹配時，同一張點數牌的那一方將獲勝。",
     "btc_quickWin_title": "BTC QuickWin",
     "btc_quickWin_content": "宙斯獨家研發產品，結合全球最火熱的數字貨幣和下注模式。",
     "btc_quickWin_intro": "從BTC/USDT價格波動圖預測30秒內的貨幣匯率趨勢，選擇『購買』或『賣』來賺取交易金額。且提供三種技術指標與路紙，簡單界面玩法與熱門話題結合，幫助您『30秒，快速贏得財富未來。』",
-    "PK10_title": "PK10",
-    "PK10_content": "北京賽車别名又稱為PK10，是根據北京福利彩票官方開獎結果所精心設計的遊戲，目前這款遊戲是大陸最熱門的快開彩。",
-    "PK10_intro": "北京賽車一天開獎44場，每20分鐘進行一場比賽365天不間斷，開獎是依據大陸的北京賽車官網開獎，全天09：10至23：50。遊戲由車號01〜10共10台車進行比賽的結果作為開獎號碼。",
+    "Pk10_title": "PK10",
+    "Pk10_content": "北京賽車别名又稱為PK10，是根據北京福利彩票官方開獎結果所精心設計的遊戲，目前這款遊戲是大陸最熱門的快開彩。",
+    "Pk10_intro": "北京賽車一天開獎44場，每20分鐘進行一場比賽365天不間斷，開獎是依據大陸的北京賽車官網開獎，全天09：10至23：50。遊戲由車號01〜10共10台車進行比賽的結果作為開獎號碼。",
     "fan_tan_title": "番攤",
     "fan_tan_content": "「番攤」是款非常特別的遊戲是專屬於台灣、中國等少數亞洲國家才會知道的遊戲",
     "fan_tan_intro": ""
