--- a/src/i18n/langs/zh-CN.json
+++ b/src/i18n/langs/zh-CN.json
@@ -24,9 +24,9 @@
     "teen_patti_title": "Teen Patti",
     "teen_patti_content": "是一种赌博 纸牌游戏 ，起源于印度次大陆 ，它起源于三张牌的英语游戏，受到扑克的影响。",
     "teen_patti_intro": "在游戏开始之前，所有人都需要按照最低数目押注，这笔资金（游戏里为虚拟币）放在桌子中央，發牌者（庄家）每次给所有人一张牌，直到每人三张为止。在發牌的过程中，每个人都可以根据自己手中的牌判断是否要增加筹码，在下注之前，每个人都可以看自己的牌，如果放弃则把牌面朝下放在桌子上。",
-    "andar_baher_title": "Andar Bahar",
-    "andar_baher_content": "Andar Bahar仅使用一副扑克牌五十二（52）张牌进行游戏，不含王牌或百搭牌。",
-    "andar_baher_intro": "选择一张（1）牌作为「起手牌」及两（2）面（Andar和Bahar），然后依次从「Andar」及「Bahar」抽一张（1）牌，直到某张牌与「起手牌」的点数匹配时，同一张点数牌的那一方将获胜。",
+    "ander_bahar_title": "Andar Bahar",
+    "ander_bahar_content": "Andar Bahar仅使用一副扑克牌五十二（52）张牌进行游戏，不含王牌或百搭牌。",
+    "ander_bahar_intro": "选择一张（1）牌作为「起手牌」及两（2）面（Andar和Bahar），然后依次从「Andar」及「Bahar」抽一张（1）牌，直到某张牌与「起手牌」的点数匹配时，同一张点数牌的那一方将获胜。",
     "btc_quickWin_title": "BTC QuickWin",
     "btc_quickWin_content": "宙斯独家研发产品，结合全球最火热的数字货币和下注模式。",
     "btc_quickWin_intro": "从BTC/USDT价格波动图预测30秒内的货币汇率趋势，选择『购买』或『卖』来赚取交易金额。且提供三种技术指标与路纸，简单界面玩法与热门话题结合，帮助您『30秒，快速赢得财富未来。』",
